[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystrain"
version = "0.1.0"
description = "a python program used for computing strain rate and strain time series from GPS data."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Bin Zhao", email = "zhaobin@cgps.ac.cn" }
]
maintainers = [
    { name = "Bin Zhao", email = "zhaobin@cgps.ac.cn" }
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyproj",
    "h5py",
    "logging",
    "sklearn"
]

[project.scripts]
"do_pystrain.py" = "pystrain.scripts.do_pystrain:main"
"plot_strain_ts.py" = "pystrain.scripts.plot_strain_ts:main"
